# topdesk-mcp

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: pypi.yml  pytest.yml
topdesk-mcp/: README.md  requirements.txt
topdesk-mcp/topdesk_mcp/: _incident.py  _topdesk_sdk.py  _utils.py  main.py
topdesk_mcp/: _incident.py  _operator.py  _person.py  _topdesk_sdk.py  _utils.py  main.py
