[project]
name = "topdesk-mcp"
version = "0.1.0"
description = "MCP server for TOPdesk API using FastMCP and TOPdeskPy SDK"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "fastmcp",
  "requests"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
lockfile = "uv.lock"
